--- a/.env.example
+++ b/.env.example
@@ -88,7 +88,7 @@ TWILIO_TOKEN=
 TWILIO_FROM=
 TWILIO_ACTIVE=false
 
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 APP_CURRENCY=USD
 APP_CURRENCY_FORMAT=12345678.00
 APP_DEFAULT_LANGUAGE=en
