--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "pusher/pusher-php-server": "^7.2",
         "razorpay/razorpay": "2.*",
         "sentry/sentry-laravel": "^3.3",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^5.5",
         "srmklive/paypal": "^3.0",
         "stichoza/google-translate-php": "^5.1",
