--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.6",
+        "endroid/qr-code": "^5.0",
         "firebase/php-jwt": "^5.5",
         "guzzlehttp/guzzle": "^7.5",
         "inertiajs/inertia-laravel": "^0.6.11",
@@ -23,6 +24,7 @@
         "php-http/message-factory": "^1.1",
         "psr/simple-cache": "^1.0",
         "pusher/pusher-php-server": "^7.2",
+        "ramsey/uuid": "^4.7",
         "razorpay/razorpay": "2.*",
         "sentry/sentry-laravel": "^3.3",
         "simplesoftwareio/simple-qrcode": "^4.2",
