--- a/.env.example
+++ b/.env.example
@@ -94,3 +94,8 @@ APP_CURRENCY_FORMAT=12345678.00
 APP_DEFAULT_LANGUAGE=en
 DATE_FORMAT=d_m_Y
 START_DAY_OF_WEEK=sunday
+
+# You can find the database URL for your project at
+# https://console.firebase.google.com/project/_/database
+FIREBASE_DATABASE_URL=https://<your-project>.firebaseio.com
+FIREBASE_CREDENTIALS=storage/app/firebase-auth.json
