--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/line-clamp": "^0.4.2",
         "@tinymce/tinymce-vue": "^4.0.7",
-        "@vueform/multiselect": "^2.5.7",
+        "@vueform/multiselect": "^2.6.9",
         "ant-design-vue": "^3.2.10",
         "chart.js": "^3.9.1",
         "click-outside-vue3": "^4.0.1",
+        "compressorjs": "^1.2.1",
         "flowbite": "^1.5.2",
         "laravel-echo": "^1.14.2",
         "preline": "^1.7.0",
