--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
         "lint": "eslint --fix 'resources/js/**/*.{js,vue}'"
     },
     "devDependencies": {
-        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.1.2",
         "@rollup/plugin-inject": "^5.0.2",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^3.0.0",
+        "@vitejs/plugin-vue": "^5.2.4",
         "autoprefixer": "^10.4.20",
-        "axios": "^0.27.2",
+        "axios": "^1.6.0",
         "babel-plugin-import": "^1.13.6",
         "eslint": "^8.35.0",
         "eslint-plugin-vue": "^9.9.0",
-        "laravel-vite-plugin": "^0.5.0",
+        "laravel-vite-plugin": "^1.3.0",
         "postcss": "^8.4.41",
         "rtlcss": "^4.0.0",
         "standard-version": "^9.5.0",
         "tailwindcss": "^3.4.10",
-        "vite": "^3.0.0",
+        "vite": "^6.3.5",
         "vue": "^3.2.31"
     },
     "dependencies": {
@@ -58,5 +58,9 @@
         "vue3-select2-component": "^0.1.7",
         "vue3-snackbar": "^1.1.2",
         "vuedraggable": "^4.1.0"
-    }
+    },
+    "overrides": {
+        "axios": "^1.6.0"
+    },
+    "type": "module"
 }
