--- a/composer.json
+++ b/composer.json
@@ -9,28 +9,27 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^3.6",
         "endroid/qr-code": "^5.0",
-        "firebase/php-jwt": "^5.5",
+        "firebase/php-jwt": "^6.3.2",
         "guzzlehttp/guzzle": "^7.5",
         "inertiajs/inertia-laravel": "^1.3",
         "kingflamez/laravelrave": "dev-master",
-        "kreait/firebase-php": "*",
-        "kreait/laravel-firebase": "^4.2",
-        "laravel/framework": "^9.19",
-        "laravel/jetstream": "^2.10",
-        "laravel/sanctum": "^2.14.1",
+        "kreait/firebase-php": "7.15.0",
+        "kreait/laravel-firebase": "^6.0.0",
+        "laravel/framework": "^11.0",
+        "laravel/jetstream": "^5.3.6",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
-        "macsidigital/laravel-zoom": "^5.0",
         "midtrans/midtrans-php": "^2.5",
         "msztorc/laravel-env": "^1.2",
-        "psr/simple-cache": "^1.0",
+        "psr/simple-cache": "^3.0",
         "pusher/pusher-php-server": "^7.2",
         "ramsey/uuid": "^4.7",
         "razorpay/razorpay": "2.*",
-        "sentry/sentry-laravel": "^3.3",
+        "sentry/sentry-laravel": "^4.15.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^4.8",
-        "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-permission": "^6.20.0",
         "srmklive/paypal": "^3.0",
         "stichoza/google-translate-php": "^5.1",
         "stripe/stripe-php": "^10.0",
@@ -40,17 +39,16 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
         "fakerphp/faker": "^1.9.1",
-        "laravel/dusk": "^7.7",
+        "laravel/dusk": "^8.3.3",
         "laravel/pint": "^1.6",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.5",
-        "nunomaduro/collision": "^6.1",
-        "pestphp/pest": "^1.23",
-        "pestphp/pest-plugin-faker": "^1.0",
-        "pestphp/pest-plugin-laravel": "^1.4",
-        "pestphp/pest-plugin-parallel": "^1.2",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^8.8",
+        "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-faker": "^3.8",
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "phpunit/phpunit": "^11.5.15",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
